--- a/workloads/OCaml/util/lib/dune
+++ b/workloads/OCaml/util/lib/dune
@@ -1,6 +1,8 @@
 (library
  (name util)
  (public_name util)
- (modules runner io parse)
+ (modules runner io parse core_plus)
  (private_modules parse)
- (libraries unix qcheck crowbar))
+ (libraries unix qcheck crowbar core)
+ (preprocess
+  (pps ppx_jane)))
