--- a/workloads/OCaml/STLC/lib/dune
+++ b/workloads/OCaml/STLC/lib/dune
@@ -2,5 +2,17 @@
 
 (library
  (name STLC)
- (modules impl spec test qcheckType qcheckBespoke crowbarBespoke crowbarType display)
- (libraries qcheck crowbar util))
+ (modules
+  impl
+  spec
+  test
+  qcheckType
+  qcheckBespoke
+  crowbarBespoke
+  crowbarType
+  baseType
+  baseBespoke
+  display)
+ (libraries qcheck crowbar util core)
+ (preprocess
+  (pps ppx_jane)))
