--- a/workloads/OCaml/BST/lib/dune
+++ b/workloads/OCaml/BST/lib/dune
@@ -14,6 +14,6 @@
   baseBespoke
   nat
   display)
- (libraries qcheck crowbar util core)
+ (libraries qcheck crowbar util core quickchick_ocaml)
  (preprocess
   (pps ppx_jane)))
