--- a/workloads/OCaml/FSM/lib/dune
+++ b/workloads/OCaml/FSM/lib/dune
@@ -1,2 +1,14 @@
+(include_subdirs unqualified)
+
 (library
- (name FSM))
+ (name FSM)
+ (modules
+  impl
+  spec
+  test
+  qcheckType
+  qcheckBespoke
+  )
+ (libraries qcheck util)
+ (preprocess
+  (pps ppx_jane)))
