--- a/workloads/OCaml/FSM/lib/dune
+++ b/workloads/OCaml/FSM/lib/dune
@@ -1,5 +1,3 @@
-(include_subdirs unqualified)
-
 (library
  (name FSM)
  (flags (:standard -w -39))
@@ -16,7 +14,7 @@
   qcheckBespokeAlt
   )
 
- (libraries qcheck crowbar util core)
+ (libraries qcheck crowbar util core base)
 
  (preprocess
   (pps ppx_jane))
